--- a/css/form.css
+++ b/css/form.css
@@ -31,23 +31,20 @@
   padding: 1em; }
   .welcome-section::after {
     display: none; }
-  .welcome-section ::selection {
-    color: green;
-    background: pink; }
   .welcome-section .form-container {
     border: none;
     outline: none;
     background: #fff;
-    width: 330px;
+    width: 500px;
     margin-top: 8vh;
     height: auto;
     text-align: center;
     border-radius: 5px;
     padding: 50px 35px 10px 35px;
-    box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a; }
+    box-shadow: inset 3px 3px 3px #ddda, inset -3px -3px 3px #000a; }
     @media (max-width: 500px) {
       .welcome-section .form-container {
-        width: 85%;
+        width: 100%;
         margin-top: 15vh;
         padding: 1em; } }
     @media (max-width: 330px) {
@@ -103,9 +100,9 @@
               text-align: center;
               padding: .3em;
               border-radius: 5px;
-              background: #485563;
-              box-shadow: inset 2px 2px 5px #fffa, inset -2px -2px 5px #000;
-              color: #fff;
+              background: #20262e;
+              box-shadow: inset 2px 2px 3px #fffa, inset -2px -2px 3px #000;
+              color: #ead2a1;
               letter-spacing: .1em;
               font-size: .7em; }
             .welcome-section .form-container .form-outer form .page .title p {
@@ -241,8 +238,8 @@
           margin: .4em auto;
           text-transform: capitalize; }
         .welcome-section .form-container .form-progress-bar .step .bullet {
-          height: 25px;
-          width: 25px;
+          height: 30px;
+          width: 30px;
           border: none;
           outline: none;
           display: inline-block;
@@ -253,15 +250,15 @@
           .welcome-section .form-container .form-progress-bar .step .bullet.active {
             border: none;
             outline: none;
-            background: #dc143c; }
+            background: #29323c; }
           .welcome-section .form-container .form-progress-bar .step .bullet span {
             color: #000;
             position: absolute;
             left: 50%;
-            transform: translateX(-50%);
+            top: 50%;
+            transform: translate(-50%, -50%);
             font-weight: 500;
             font-size: .8em;
-            line-height: 22px;
             font-family: 'Poppins', sans-serif; }
           .welcome-section .form-container .form-progress-bar .step .bullet.active span {
             display: none; }
@@ -269,12 +266,17 @@
             position: absolute;
             content: '';
             bottom: 50%;
-            right: -30px;
-            height: 3px;
-            width: 25px;
+            right: -50px;
+            height: 1px;
+            width: 35px;
             background: #a3a3a30c; }
+            @media (max-width: 768px) {
+              .welcome-section .form-container .form-progress-bar .step .bullet::before, .welcome-section .form-container .form-progress-bar .step .bullet::after {
+                width: 20px;
+                right: -30px; } }
           .welcome-section .form-container .form-progress-bar .step .bullet.active::after {
-            background: #dc143c;
+            background: #ead2a1;
+            border: 2px solid #29323c;
             transform: scaleX(0);
             transform-origin: left;
             animation: animate .6s linear forwards; }
@@ -292,11 +294,11 @@
           left: 50%;
           top: 80%;
           font-size: 15px;
-          transform: translate(-50%, -50%);
+          transform: translate(-50%, -70%);
           display: none; }
           .welcome-section .form-container .form-progress-bar .step .check.active {
             display: block;
-            color: #fff; }
+            color: #ead2a1; }
 
 .form-footer .footer {
   padding-top: 0; }
