--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -45,6 +45,7 @@ $nav-active-background: #1b2127;
 $ul-background: #1f1e1e;
 // button colors
 $button-background-grey: #8584844b;
+$button-crimson: linear-gradient(0deg, #3f0d0d, #dc134c);
 
 // form  
 $background-invalid: #f7cdd5c7;
