--- a/scss/style.scss
+++ b/scss/style.scss
@@ -596,7 +596,52 @@ body {
 }
 // end of hero section
 
-// pad sectiion 
+// pad section 
+.skills-pad {
+    height: 90vh;
+    width: 100%;
+    background-color: $overlay-blue-dark;
+    // background-color: yellow;
+    padding: 10vh 20vw;
+    display: grid;
+    place-items: center;
+
+    figure {
+        width: 100%;
+        height: 100%;
+        margin: 5vh auto;
+        border-radius: 5px;
+        overflow: hidden;
+        // border: 2px solid red;
+
+        img {
+            width: 100%;
+            height: 100%;
+            // object-fit: contain;
+            border-radius: 5px;
+        }
+    }
+    // small screens
+    @media (max-width: 1024px) {
+        height: auto;
+        padding: 0 5vw 5vh;
+        // background: yellow;
+        place-items: start;
+        figure {
+            height: auto;
+            // border: 2px solid yellow;
+            width: 100%;
+            // border: 2px solid blue;
+
+
+            img {
+                border-radius: 5px;
+                object-position: top;
+                object-fit: contain;
+            }
+        }
+    }
+}
 .paralax {
     height: 100vh;
     width: 100%;
@@ -618,7 +663,7 @@ body {
     }
     &.px1 {
         @media(min-width: 768px){
-            display: none;
+            // display: none;
         }
         height: 70vh;
         background-image: url(../img/nadine-shaabana-0xD40qm07X0-unsplash-min.jpg);
