--- a/css/style.css
+++ b/css/style.css
@@ -850,8 +850,9 @@ hamburger
               transition: .3s;
               background: linear-gradient(0deg, #3f0d0d, #dc134c);
               border-radius: 10px;
-              padding: .5em;
+              padding: .5em 1em;
               opacity: 0;
+              box-shadow: inset 1px 1px 3px #fffa, inset -1px -1px 3px #000a;
               transition: .3s ease; }
           #projects .projects .all-projects .project-item .project-tile a:hover h2 {
             color: #ead2a1; }
