--- a/css/style.css
+++ b/css/style.css
@@ -776,9 +776,7 @@ hamburger
         align-items: flex-start;
         justify-content: center;
         flex-direction: column;
-        background-image: var(--overlay);
-        background: #485563c5;
-        backdrop-filter: blur(1px);
+        background-color: #485563;
         transition: 1.3s ease; }
         @media (min-width: 768px) {
           #projects .projects .all-projects .project-item .project-tile {
@@ -825,16 +823,7 @@ hamburger
           outline: none;
           border-radius: 5px;
           transition: all .3s ease;
-          position: relative; }
-          #projects .projects .all-projects .project-item .project-tile a::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 5px;
-            box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 5px #000a; }
+          border: 2px solid #ead2a1; }
           #projects .projects .all-projects .project-item .project-tile a i {
             transition: .2s;
             color: #ead2a1;
@@ -1757,6 +1746,7 @@ body {
   display: grid;
   place-items: center;
   z-index: -1;
+  overflow: hidden;
   position: relative; }
   .section-pad figure {
     width: 100%;
@@ -1780,6 +1770,14 @@ body {
           border-radius: 5px;
           object-position: top;
           object-fit: contain; } }
+  @media (max-width: 768px) {
+    .section-pad.pad-logo {
+      background-color: pink;
+      padding: 0 5vw; }
+      .section-pad.pad-logo figure img {
+        object-fit: cover; } }
+  .section-pad.pad-logo figure img {
+    object-fit: cover; }
   .section-pad.pad2 figure img {
     object-fit: cover; }
   .section-pad.pad2 [data-scroll="in"] {
