--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -87,12 +87,8 @@
                     align-items: flex-start;
                     justify-content: center;
                     flex-direction: column;
-                    background-image: var(--overlay);
-                    background: #485563c5;
-                    backdrop-filter: blur(1px);
+                    background-color: $overlay-blue-light;
                     transition: 1.3s ease;
-                    // box-shadow: inset 5px 0px 3px rgba(150, 149, 149, 0.667),
-                    //             inset -3px -5px 3px #000a;
                     // project Title (h1)
                     h1 {
                         font-size: 1.15em;
@@ -145,19 +141,7 @@
                         outline: none;
                         border-radius: 5px;
                         transition: all .3s ease;
-                        position: relative;
-                        // project tile box shadow
-                        &::before {
-                            content: '';
-                            position: absolute;
-                            top: 0;
-                            left: 0;
-                            width: 100%;
-                            height: 100%;
-                            border-radius: 5px;
-                            box-shadow: inset 2px 2px 3px #ddda,
-                                        inset -2px -2px 5px #000a;
-                        }
+                        border: 2px solid $span-gold;
                         // end of project tile box shadow
                         // links icon
                         i {
