--- a/scss/style.scss
+++ b/scss/style.scss
@@ -606,6 +606,7 @@ body {
     display: grid;
     place-items: center;
     z-index: -1;
+    overflow: hidden;
     position: relative;
 
     figure {
@@ -619,7 +620,6 @@ body {
         img {
             width: 100%;
             height: 100%;
-            // object-fit: contain;
             border-radius: 5px;
         }
     }
@@ -635,7 +635,6 @@ body {
             width: 100%;
             // border: 2px solid blue;
 
-
             img {
                 border-radius: 5px;
                 object-position: top;
@@ -645,7 +644,25 @@ body {
     }
 
     &.pad-logo {
-        
+        // logo pad on small screens
+        @media (max-width: 768px) {
+            background-color: pink;
+            padding: 0 5vw;
+
+            figure {
+                img {
+                    object-fit: cover;
+                }
+            }
+            
+        }
+        // end of logo pad on small screens
+
+        figure {
+            img {
+                object-fit: cover;
+            }
+        }
     }
     &.pad2 {
         // background-color: pink;
