--- a/css/style.css
+++ b/css/style.css
@@ -560,12 +560,6 @@ hamburger
       @media (min-width: 1024px) {
         #contact .contact .contact-items .contact-item {
           width: 30%; } }
-      #contact .contact .contact-items .contact-item:nth-child(1) {
-        cursor: help; }
-      #contact .contact .contact-items .contact-item:nth-child(2) {
-        cursor: alias; }
-      #contact .contact .contact-items .contact-item:nth-child(3) {
-        cursor: alias; }
       #contact .contact .contact-items .contact-item::after {
         position: absolute;
         content: '';
@@ -607,36 +601,29 @@ hamburger
       #contact .contact .contact-items .contact-item .icon {
         margin: 5px auto 10px auto;
         padding: .3em .7em;
+        height: 4em;
+        width: 4em;
         border: none;
-        outline: none;
+        background: #20262e;
+        border-radius: 50%;
+        outline: 2px solid #ead2a1;
         position: relative;
         display: grid;
         place-items: center;
         transition: .5s ease; }
+        #contact .contact .contact-items .contact-item .icon i {
+          font-size: 1.5em;
+          color: #fff;
+          transform: scale(0.8);
+          transition: .5s ease; }
         @media (min-width: 768px) {
           #contact .contact .contact-items .contact-item .icon {
             height: 80px;
             width: 80px;
             margin: 0;
             padding: 0; }
-            #contact .contact .contact-items .contact-item .icon img {
-              object-fit: contain; } }
-        #contact .contact .contact-items .contact-item .icon::before {
-          position: absolute;
-          content: '';
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background: #f4f4f4;
-          border-radius: 50%;
-          box-shadow: inset 3px 3px 4px #ddda, inset -3px -3px 4px #000a;
-          transition: .5s ease;
-          transform: preserve-3d; }
-        #contact .contact .contact-items .contact-item .icon img {
-          transition: 1s ease;
-          transform: scale(0.85) rotateY(40deg) skewX(20deg);
-          transform: preserve-3d; }
+            #contact .contact .contact-items .contact-item .icon i {
+              font-size: 2em; } }
       #contact .contact .contact-items .contact-item .contact-info h2 {
         font-size: .8em;
         line-height: 1.3;
@@ -703,9 +690,18 @@ hamburger
           transform: translateY(100%);
           opacity: 0;
           transition: 1s ease; }
-      #contact .contact .contact-items .contact-item:hover img {
-        transform: scale(1);
-        transform: preserve-3d; }
+      #contact .contact .contact-items .contact-item:nth-child(1) {
+        cursor: help; }
+      #contact .contact .contact-items .contact-item:nth-child(2) {
+        cursor: alias; }
+      #contact .contact .contact-items .contact-item:nth-child(3) {
+        cursor: alias; }
+      #contact .contact .contact-items .contact-item:hover .icon {
+        outline: 2px dashed #ead2a1;
+        outline-offset: -.5em; }
+        #contact .contact .contact-items .contact-item:hover .icon i {
+          color: #ead2a1;
+          transform: scale(1); }
       #contact .contact .contact-items .contact-item:hover .contact-info a {
         opacity: 1; }
         #contact .contact .contact-items .contact-item:hover .contact-info a i {
